SF_CodeBase/objects/talkdesk__Talkdesk_Disposition_Code__c.object
<CustomObject>
    <fields>
        <fullName>talkdesk__External_ID__c</fullName>
        <description>Talkdesk ID of Disposition Code</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Showing was disposition code deleted from Talkdesk App or not</description>
        <inlineHelpText>Is set to false if there is no such disposition code in Talkdesk</inlineHelpText>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Id__c</fullName>
        <externalId>true</externalId>
        <label>Talkdesk Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Talkdesk Disposition Code</label>
    <nameField>
        <label>Disposition Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talkdesk Disposition Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>